--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -13,9 +13,26 @@
     </div>
 
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
 
-
-
+<script>
+    // Sayfanın başlangıç zoom seviyesi
+    
+  
+    // Ekran genişliği 1500 pikselden büyükse
+    if (window.innerWidth > 1300) {
+        document.body.style.zoom='0.7'
+        document.body.style.width='1600px';
+        document.body.style.height='130vh';
+        document.body.style.margin=' auto';
+        document.body.style.transition='all 0.4s'
+    }
+  
+    
+    
+  </script>
 <script src="/app.js"></script>
 
 </body>
