--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,25 +1,41 @@
-<%- include('partials/header') %> 
-<%- include('partials/navbar') %>
+<%- include('partials/header') %> <%- include('partials/navbar') %>
 
 <section class="all-camps">
-  <h1 class="err-text">
-    <%= message %> <span class="hata" style="color: red"><span class="hata">Hata kodu :</span> <%= statusCode %></span>
-    <a class="back" href="javascript:void(0);" onclick="goBack()"
+  <div style="width: 100%; text-align: center;" class="div">
+    <h2 style="color: white">SOMETHİNG WENT WRONG</h2>
+
+    <a style="color: white;" class="back" href="javascript:void(0);" onclick="goBack()"
       ><i class="fa-solid fa-left-long"></i> BACK</a
     >
-  </h1>
-  <div class="err-container">
+  </div>
+ 
 
-  
-  <div  class="err-img">
-    <img src="https://steamuserimages-a.akamaihd.net/ugc/940574482399412994/466C45B14582C2A720A6CA10AFC1D32EB548B339/?imw=5000&imh=5000&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=false" alt="...">
+  <div class="errors">
+    <h1 class="err-text">
+      <%= message %>
+      <span class="hata" style="color: red"
+        ><span class="hata">Hata kodu :</span> <%= statusCode %></span
+      >
+      <a class="back" href="javascript:void(0);" onclick="goBack()"
+        ><i class="fa-solid fa-left-long"></i> BACK</a
+      >
+    </h1>
+    <% if(process.env.NODE_ENV !== "production"){ %>
+    <div class="err-container">
+      <div class="err-img">
+        <img
+          src="https://steamuserimages-a.akamaihd.net/ugc/940574482399412994/466C45B14582C2A720A6CA10AFC1D32EB548B339/?imw=5000&imh=5000&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=false"
+          alt="..."
+        />
+      </div>
+
+      <div class="err-stack">
+        <span><%= err.stack %></span>
+      </div>
+    </div>
   </div>
 
-  <div class="err-stack">
-    <span><%= err.stack %></span>
-  </div>
-</div>
-
+  <% } %>
   <script>
     function goBack() {
       window.history.back();
