--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,6 @@
 
 <footer class="containerAll">
-    <p>&copy; 2023 Yelp-Camp CNINNMAKESDEV</p>
+    <p>&copy; 2023 Yelp-Camp by Colt Steele bootcamp - CNINNMAKESDEV</p>
 </footer>
 </div>
     <div style="display: none;"  class="loading">
@@ -18,10 +18,9 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
 
 <script>
-    // Sayfanın başlangıç zoom seviyesi
-    
-  
-    // Ekran genişliği 1500 pikselden büyükse
+ 
+
+
     if (window.innerWidth > 1300) {
         document.body.style.zoom='0.7'
         document.body.style.width='1600px';
@@ -30,9 +29,10 @@
         document.body.style.transition='all 0.4s'
     }
   
-    
+
     
   </script>
+  
 <script src="/app.js"></script>
 
 </body>
