--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,25 +4,28 @@
 <%- include('partials/navbar') %>
 
 
-<div class="hero-con">
+<a href="/campgrounds" class="get-started">GET STARTED</a>
+<div style="position: absolute; top:50%; left:50%; transform: translate(-50%, -50%);" class="hero-con all-camps">
+
+    
 
 
-    <div class="img-con">
-        <img src="https://images.unsplash.com/photo-1487730116645-74489c95b41b?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D'" alt="home">
-        <div class="overlay"></div>
+    <div style="margin-top: 3rem;" class="img-con">
+        <img  style="box-shadow: 3px 2px 5px black; width:400px; height: 400px; border-radius: 50%;" src="https://images.unsplash.com/photo-1487730116645-74489c95b41b?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D'" alt="home">
+        <div style="box-shadow: 3px 3px 6px black; width:400px; height: 400px; border-radius: 50%;"  class="overlay"></div>
     
         
     </div>
 
-    <div class="hero-text">
-        <h1>FİNDCAMP</h1>
+    <div  class="hero-text">
+        <h1 style="border-radius: 20px;">FİNDCAMP</h1>
         <h2>NEED YOU SİLENCE ?</h2>
         <p>You deserve it</p>
     </div>
 
 
 </div>
-
+          
 <%- include('partials/footer') %>
 
 
