--- a/public/app.css
+++ b/public/app.css
@@ -418,7 +418,7 @@ nav h4{
   .camp img{
     
     width: 100%!important;
-    height:400px!important;
+    height:380px!important;
 
   }
   .detail-two{
@@ -522,6 +522,7 @@ nav h4{
 /* TODO: Footer  ****************************************************/
 footer{
     position: fixed;
+    bottom: 0;
     width: 100vw;
     bottom: 0;
   color:darkorange;
@@ -529,10 +530,11 @@ footer{
     padding: 20px;
   
     display: flex;
-    height: max-content;
+    height:80px;
     align-items: center;
     justify-content: center;
-    gap: 1rem;
+    text-align: center;
+   
  /*    background-image: linear-gradient( 111.4deg,  rgba(7,7,9,1) 6.5%, rgba(27,24,113,1) 93.2% ); */
 }
 
@@ -1217,5 +1219,41 @@ input[type="checkbox"] + label {
     .descs{
         background:0!important;
         background-color: transparent!important;
+    }
+ }
+
+ .get-started{
+    font-size: 40px;
+    position: absolute;
+    top: 15%;
+    left: 50%;
+    transform: translateX(-50%);
+    padding: 10px 50px;
+    border: none;
+    outline: none;
+    background-color: #000814;
+    color:#fdd02e;
+    font-weight: bold;
+    border-radius: 40px;
+    animation: buttons 2s linear alternate infinite;
+ }
+ @media(max-width:768px){
+    .get-started{
+        font-size: 30px;
+        width: 70%;
+        text-align: center;
+        
+    }
+ }
+
+ @keyframes buttons {
+    from{
+        color:white;
+    }
+    to{
+        color: #fdd02e;
+        text-shadow: 0 0 8px rgba(247, 169, 0, 0.8);
+        background-color: transparent;
+        box-shadow: 0 0 15px 0px black;
     }
  }
