--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,16 +1,10 @@
 
-<footer class="containerAll">
-    <p>&copy; 2023 Yelp-Camp by Colt Steele bootcamp - CNINNMAKESDEV</p>
+<footer style="background-color: rgba(0, 0, 0, 0.466); border-radius: 20px;" class="containerAll">
+    <p>&copy; 2023 Yelp-Camp by Colt Steele bootcamp <br>
+         - CNINNMAKESDEV</p>
 </footer>
 </div>
-    <div style="display: none;"  class="loading">
-        <div class="hero-text load-img" style="margin-left: 40px;">
-            <h1 style="top:50%; left: 50%; transform: translate(-50% -50%);  ">FİNDCAMP</h1>
-           
-          
-        </div>
-        <h2 style="opacity: 0.6;">SAYFA YÜKLENİYOR</h2>
-    </div>
+
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
@@ -24,7 +18,7 @@
     if (window.innerWidth > 1300) {
         document.body.style.zoom='0.7'
         document.body.style.width='1600px';
-        document.body.style.height='130vh';
+        document.body.style.height='142vh';
         document.body.style.margin=' auto';
         document.body.style.transition='all 0.4s'
     }
